--- a/TIL/pagination/package.json
+++ b/TIL/pagination/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "ex1-rtk",
+  "name": "pagination",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.4.0",
-    "msw": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.7",
-    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
-    "styled-reset": "^4.4.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,11 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "redux-logger": "^3.0.6"
-  },
-  "msw": {
-    "workerDirectory": "public"
   }
 }
